--- a/ObkoUSB/usb_tlp_summary.html
+++ b/ObkoUSB/usb_tlp_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>usb_tlp Project Status (12/15/2017 - 11:36:53)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>usb_tlp Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>ObkoUSB.xise</TD>
@@ -25,30 +25,30 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\_xmsgs/*.xmsgs?&DataKey=Warning'>29 Warnings (29 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\_xmsgs/*.xmsgs?&DataKey=Warning'>29 Warnings (29 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
 <TD>Balanced</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Routing Results:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.unroutes'>All Signals Completely Routed</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Strategy:</B></dif></TD>
 <TD><A HREF_DISABLED='Xilinx Default (unlocked)?&DataKey=Strategy'>Xilinx Default (unlocked)</A></TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Timing Constraints:</B></LI></UL></TD>
 <TD>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp_envsettings.html'>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
 </TR>
 </TABLE>
 
@@ -203,7 +203,7 @@ System Settings</A>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>147</TD>
 <TD ALIGN=RIGHT>232</TD>
 <TD ALIGN=RIGHT>63%</TD>
@@ -363,18 +363,18 @@ System Settings</A>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
 <TD>0 (Setup: 0, Hold: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Routing Results:</B></TD><TD>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.unroutes'>All Signals Completely Routed</A></TD>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.unroutes'>All Signals Completely Routed</A></TD>
 <TD BGCOLOR='#FFFF99'><B>Clock Data:</B></TD>
-<TD COLSPAN='2'><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
+<TD COLSPAN='2'><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp_par.xrpt?&DataKey=ClocksData'>Clock Report</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Timing Constraints:</B></TD>
 <TD>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.ptwx?&DataKey=ConstraintsData'>All Constraints Met</A></TD>
 <TD BGCOLOR='#FFFF99'><B>&nbsp;</B></TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TABLE>
@@ -385,20 +385,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Fri 15. Dec 11:33:30 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\_xmsgs/xst.xmsgs?&DataKey=Warning'>29 Warnings (29 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\_xmsgs/xst.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.bld'>Translation Report</A></TD><TD>Current</TD><TD>Fri 15. Dec 11:33:36 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Fri 15. Dec 11:34:35 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Fri 15. Dec 11:35:43 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\_xmsgs/xst.xmsgs?&DataKey=Warning'>29 Warnings (29 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\_xmsgs/xst.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.bld'>Translation Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\_xmsgs/map.xmsgs?&DataKey=Info'>6 Infos (6 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (3 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Fri 15. Dec 11:35:51 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (4 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\usb_tlp.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Fri 15. Dec 11:36:52 2017</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (4 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\usb_tlp.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/ObkoUSB\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Fri 15. Dec 11:36:53 2017</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue 2. Jan 11:54:20 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/ObkoUSB\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue 2. Jan 11:54:20 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/15/2017 - 11:56:14</center>
+<br><center><b>Date Generated:</b> 01/02/2018 - 11:57:18</center>
 </BODY></HTML>
