--- a/my_usb1/usb1_core_summary.html
+++ b/my_usb1/usb1_core_summary.html
@@ -2,18 +2,18 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>usb1_core Project Status (12/18/2017 - 10:12:17)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>usb1_core Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>my_usb1.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>2 Errors</A></TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>2 Errors</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>usb1_core</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Synthesized (Failed)</TD>
+<TD>Synthesized</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
@@ -21,12 +21,12 @@
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
 <font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\_xmsgs/*.xmsgs?&DataKey=Error'>1 Error (0 new)</A></TD>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\_xmsgs/*.xmsgs?&DataKey=Error'>1 Error (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\_xmsgs/*.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\_xmsgs/*.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -44,7 +44,7 @@
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\usb1_core_envsettings.html'>
+<A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\usb1_core_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -66,7 +66,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\usb1_core.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon 18. Dec 10:12:15 2017</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\_xmsgs/xst.xmsgs?&DataKey=Error'>1 Error (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='U:/Desktop/XilinxProject/my_usb1\_xmsgs/xst.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\usb1_core.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue 2. Jan 11:54:21 2018</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\_xmsgs/xst.xmsgs?&DataKey=Error'>1 Error (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/jimmy/Desktop/USB_Research/my_usb1\_xmsgs/xst.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Translation Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -80,5 +80,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/18/2017 - 10:12:17</center>
+<br><center><b>Date Generated:</b> 01/02/2018 - 11:56:43</center>
 </BODY></HTML>
