--- a/inout/Device_summary.html
+++ b/inout/Device_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>input_output_example Project Status (01/25/2018 - 12:02:51)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Device Project Status (01/25/2018 - 14:56:31)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>inout.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/*.xmsgs?&DataKey=Warning'>35 Warnings (29 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/*.xmsgs?&DataKey=Warning'>9 Warnings (3 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -89,9 +89,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>1</TD>
+<TD ALIGN=RIGHT>8</TD>
 <TD ALIGN=RIGHT>232</TD>
-<TD ALIGN=RIGHT>1%</TD>
+<TD ALIGN=RIGHT>3%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB16BWERs</TD>
@@ -251,21 +251,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Jan 25 12:01:12 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/xst.xmsgs?&DataKey=Warning'>35 Warnings (29 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Jan 25 12:02:00 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Jan 25 12:02:19 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (2 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Jan 25 12:02:36 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Thu Jan 25 14:55:44 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/xst.xmsgs?&DataKey=Warning'>9 Warnings (3 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.bld'>Translation Report</A></TD><TD>Current</TD><TD>Thu Jan 25 14:55:53 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Thu Jan 25 14:56:05 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/map.xmsgs?&DataKey=Info'>8 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Thu Jan 25 14:56:19 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Jan 25 12:02:47 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\Device.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Thu Jan 25 14:56:28 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Bitgen Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Thu Jan 25 15:23:48 2018</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Jan 24 14:52:07 2018</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/inout\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Jan 24 14:52:19 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 01/25/2018 - 12:21:58</center>
+<br><center><b>Date Generated:</b> 01/25/2018 - 15:27:27</center>
 </BODY></HTML>
