--- a/usb1.1/Nexys3_USB_Interface_summary.html
+++ b/usb1.1/Nexys3_USB_Interface_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>Nexys3_USB_Interface Project Status (01/24/2018 - 14:08:02)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>Nexys3_USB_Interface Project Status (01/29/2018 - 11:14:23)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>usb1.1.xise</TD>
@@ -90,7 +90,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice LUTs</TD>
-<TD ALIGN=RIGHT>602</TD>
+<TD ALIGN=RIGHT>595</TD>
 <TD ALIGN=RIGHT>9,112</TD>
 <TD ALIGN=RIGHT>6%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -186,13 +186,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used exclusively as route-thrus</TD>
-<TD ALIGN=RIGHT>25</TD>
+<TD ALIGN=RIGHT>18</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number with same-slice register load</TD>
-<TD ALIGN=RIGHT>14</TD>
+<TD ALIGN=RIGHT>7</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -210,9 +210,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>291</TD>
+<TD ALIGN=RIGHT>259</TD>
 <TD ALIGN=RIGHT>2,278</TD>
-<TD ALIGN=RIGHT>12%</TD>
+<TD ALIGN=RIGHT>11%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of MUXCYs used</TD>
@@ -222,27 +222,27 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>721</TD>
+<TD ALIGN=RIGHT>710</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>266</TD>
-<TD ALIGN=RIGHT>721</TD>
-<TD ALIGN=RIGHT>36%</TD>
+<TD ALIGN=RIGHT>246</TD>
+<TD ALIGN=RIGHT>710</TD>
+<TD ALIGN=RIGHT>34%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>119</TD>
-<TD ALIGN=RIGHT>721</TD>
+<TD ALIGN=RIGHT>115</TD>
+<TD ALIGN=RIGHT>710</TD>
 <TD ALIGN=RIGHT>16%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>336</TD>
-<TD ALIGN=RIGHT>721</TD>
-<TD ALIGN=RIGHT>46%</TD>
+<TD ALIGN=RIGHT>349</TD>
+<TD ALIGN=RIGHT>710</TD>
+<TD ALIGN=RIGHT>49%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
@@ -264,9 +264,9 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>10</TD>
+<TD ALIGN=RIGHT>11</TD>
 <TD ALIGN=RIGHT>12</TD>
-<TD ALIGN=RIGHT>83%</TD>
+<TD ALIGN=RIGHT>91%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of RAMB16BWERs</TD>
@@ -421,7 +421,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Performance Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=PerformanceSummary"><B>[-]</B></a></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Final Timing Score:</B></TD>
-<TD>0 (Setup: 0, Hold: 0)</TD>
+<TD>0 (Setup: 0, Hold: 0, Component Switching Limit: 0)</TD>
 <TD BGCOLOR='#FFFF99'><B>Pinout Data:</B></TD>
 <TD COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface_par.xrpt?&DataKey=PinoutData'>Pinout Report</A></TD>
 </TR>
@@ -445,22 +445,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Wed Jan 24 14:05:47 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/xst.xmsgs?&DataKey=Warning'>335 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/xst.xmsgs?&DataKey=Info'>50 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Jan 24 14:05:58 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Jan 24 14:06:38 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/map.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Jan 24 14:06:58 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/par.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Jan 29 11:10:09 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/xst.xmsgs?&DataKey=Warning'>335 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/xst.xmsgs?&DataKey=Info'>50 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Jan 29 11:11:20 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Jan 29 11:11:55 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/map.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/map.xmsgs?&DataKey=Info'>9 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Mon Jan 29 11:12:17 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/par.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Wed Jan 24 14:07:08 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Jan 24 14:07:50 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Mon Jan 29 11:12:30 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/trce.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\Nexys3_USB_Interface.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Mon Jan 29 11:14:10 2018</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Jan 24 12:27:05 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Jan 24 14:07:51 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Jan 24 14:08:01 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Jan 29 11:14:12 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/root/Desktop/USB_Research/usb1.1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Jan 29 11:14:22 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 01/24/2018 - 14:08:02</center>
+<br><center><b>Date Generated:</b> 01/29/2018 - 15:06:33</center>
 </BODY></HTML>
